STDMDD-652 / STDMDD-653 Aggiornameto documentazione
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4430 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/faq/faq_business_logic.html
+++ b/html/guigen/faq/faq_business_logic.html
@@ -117,7 +117,7 @@
       </p>
       
       <h4>VisibilityCommand, ONOFFCommmand</h4>
-      <p>Agiscono sulla visibilit&agrave;/editabilit&agrave; di uno o pi&ugrave; widget.
+      <p>Agiscono sulla visibilit&agrave;/editabilit&agrave; di uno o pi&ugrave; widget e\o menu.
       Ha senso solo all'interno di un <b>ContentPanel</b> e possono operare solo sui <b>Widget</b>
       di quel <b>ContentPanel</b>.
       </p>
