--- a/html/guigen/overview.html
+++ b/html/guigen/overview.html
@@ -450,9 +450,9 @@ Lo sviluppatore ha inoltre a disposizione nella business logic le info relative 
 		<ul>
 		<li>comandi di gestione dello stato della schermata
 		<ul>
-			<li><b>ONOFFCommand</b>: abilitazione/disabilitazione di un set di widget definito a tempo di design</li>
+			<li><b>ONOFFCommand</b>: abilitazione/disabilitazione di un set di widget e\o menu definito a tempo di design</li>
 	
-			<li><b>VisibilityCommand</b>: rendere visibile/invisibile un set di widget definito a tempo di design</li>
+			<li><b>VisibilityCommand</b>: rendere visibile/invisibile un set di widget e\o menu definito a tempo di design</li>
 	
 			<li><b>ScreenStateCommand</b>: permette di far passare la schermata corrente ad un particolare stato di abilitazione/visibilit&agrave; complessiva dei widget in esso contenuti;</li>
 		</ul>
