--- a/html/guigen/guides/stilizzazione_grafica/index.html
+++ b/html/guigen/guides/stilizzazione_grafica/index.html
@@ -90,10 +90,10 @@
 	  relativa al singolo progetto si trova nell percorso <i>ris/utheme/&lt;nome_canale&gt;/&lt;nome_applicativo;&gt;</i>.
 	  </p>
 	  <p>
-	  Nella modalit&agrave; <i>neutral/M2/remota</i> tale cartella &egrave; generata dalla cartuccia di generazione
-	  <i>webres.mwe</i> e deve essere installata (copiata) sul web server unitamente all'installazione dell'applicazione
+	  Nella modalit&agrave; <i>neutral/M2/remota</i> tale cartella 
+	  deve essere installata (copiata) sul web server unitamente all'installazione dell'applicazione
 	  J2EE nell'application server</p>
-	  <p>Di fatto, per&ograve; &egrave; necessario creare manualmente le risorse statiche.
+	  <p>Di fatto &egrave; necessario creare manualmente le risorse statiche.
 	  Le risorse necessarie sono le seguenti:
 	  <table border="1">
 	  <thead><tr><td><b>risorsa</b></td><td><b>descrizione</b></td><td><b>posizione sul webserver</b></td><td><b>note</b></td></tr></thead>
