STDMDD-1128: ON_ENTER deve essere eseguito ad ogni ingresso di schermata.
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4611 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -202,7 +202,7 @@
 												src=".//img/yes.gif">ON_INIT
 											<li><img alt="Operation Eseguita" src=".//img/no.gif">ON_REFRESH
 											<li><img alt="Operation Non Eseguita"
-												src=".//img/no.gif">ON_ENTER
+												src=".//img/yes.gif">ON_ENTER
 										</ol>
 									</td>
 									<td class="featureDescr" >
@@ -212,7 +212,7 @@
 												src=".//img/yes.gif">ON_INIT
 											<li><img alt="Operation Eseguita" src=".//img/no.gif">ON_REFRESH
 											<li><img alt="Operation Non Eseguita"
-												src=".//img/no.gif">ON_ENTER
+												src=".//img/yes.gif">ON_ENTER
 										</ol>
 									CP Destinazione (seconda chiamta)	
 										<ol type="disc">
