STDMDD-1233: guida alle funzioni cartografiche
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4647 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/guides.html
+++ b/html/guigen/guides/guides.html
@@ -22,6 +22,7 @@
 	  <li><a href="esposizione_multiportale/index.html">Esposizione <i>multi-portale</i> delle applicazioni</a></li>
 	  <li><a href="interazione_applicazioni/index.html">Interazione tra differenti applicazioni a livello di U.I</a></li>
 	  <li><a href="wysiwyg_editor/index.html">Visualizzatore WYSIWYG di schermate</a></li>
+	  <li><a href="funzioni_cartografiche/index.html">Utilizzo delle funzioni cartografiche</a></li>
 	  </ul>
 	  </p>     
    </body>
