--- a/html/guigen/overview.html
+++ b/html/guigen/overview.html
@@ -60,7 +60,14 @@
  	</p>
  	<p>
  	Attualmente il target di generazione &egrave; rappresentato da una web-application J2EE compliant con l'attuale framework applicativo basato
- 	su tecnologie Servlet/JSP e framework struts2. Per approfondimenti circa il mapping tram modello GUIGEN e piattaforma specifica 
+ 	su tecnologie Servlet/JSP e framework struts2/spring. Dalla versione 2.4.0 &egrave; possibile generare:
+ 	</p>
+ 	<ol>
+ 	<li>un EAR deployabile in applicaqtion server <b>JBoss 4.3</b> o <b>Weblogic9.2</b></li>
+ 	<li>un WAR deployabile in un portlet container <b>liferay</b></li>
+ 	</ol>
+ 	<p>
+ 	Per approfondimenti circa il mapping tram modello GUIGEN e piattaforma specifica 
  	(ovvero per comprendere meglio le regole di generazione del codice a frointe del metamodello, &egrave;
  	possibile consultare la sezione <a href="rationale.html">design rationale</a>.   	 
 	</p>
