STDMDD-1437: nelle FAQ di UI: TAB_SELECTED -> CLICKED
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/branches/RB-2.4@5378 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/faq/faq_dinamiche_ui.html
+++ b/html/guigen/faq/faq_dinamiche_ui.html
@@ -76,7 +76,7 @@
 	 </li>
 	 <li><b>TabSwitcher</b>
 	 	<ul>
-	 	<li><i>TAB_SELECTED</i>: il widget fittizio <b>TabSwitcher</b> permette di associare 
+	 	<li><i>CLICKED</i>: il widget fittizio <b>TabSwitcher</b> permette di associare 
 	 	logica applicativa/comandi all'evendo di cambio tab in un <b>TabSetPanel</b> e di 
 	 	salto ad uno step specifico in un <b>WizardPanel</b> (se utilizzato in modalit&agrave; 
 	 	navigatore-attivo)
