STDMDD-1437: nelle FAQ di UI: TAB_SELECTED -> CLICKED
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/branches/RB-2.4@5379 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/faq/faq_dinamiche_ui.html
+++ b/html/guigen/faq/faq_dinamiche_ui.html
@@ -369,7 +369,7 @@
      </div>
      <div class="faq_answer">
      <p><b>A:</b> Si, &egrave; possibile. Occorre modellare un <b>TabSwitcher</b>, con 
-     <b>EventHandler</b> (<i>TAB_SELECTED</i>), con un <b>ExecCommand</b> che avr&agrave;
+     <b>EventHandler</b> (<i>CLICKED</i>), con un <b>ExecCommand</b> che avr&agrave;
      il compito di eseguire le verifiche del caso.
      </p>
      <p>Le condizioni per cui non verr&agrave; effettuato il cambio di tab sono:
