STDMDD-1471: doc. value changed su check box
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@5501 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/faq/faq_dinamiche_ui.html
+++ b/html/guigen/faq/faq_dinamiche_ui.html
@@ -66,6 +66,12 @@
 	 	</li>
 	 	</ul>
 	 </li>
+	 <li><b>CheckBox</b>
+	 	<ul>
+	 	<li><i>VALUE_CHANGED</i>: rappresenta l'evento di selezione/deselezione del check.
+	 	</li>
+	 	</ul>
+	 </li>
 	 <li><b>TextField</b>
 	 	<ul>
 	 	<li><i>KEY_PRESSED</i>: disponibile solo in modalit&agrave; 'ricca' - rappresenta 
