corretta documentazione delle cartridges per prevedere la property  jsPlatform
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@5571 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -156,6 +156,20 @@ poi applicare la cartuccia di <i>generazione</i> del prototipo.
 	  </tr>
 	  
 	  <tr>
+	  <td>jsPlatform</td>
+	  <td>codice della piattaforma javascript d autilizzare per gli arricchimenti client-side. Po&ograve;
+	  valere:
+	  	<ul>
+	   <li>&quot;jquery&quot; = framework basato su JQuery</li> 
+	   <li>&quot;extjs&quot; = framework basato su Sencha ExtJS 3.4 (deprecato)</li>
+	   </ul>
+	   </td>
+	    
+	  <td><code>jquery</code></td>
+	  <td>obbl</td>
+	  </tr>
+	  
+	  <tr>
 	  <td>propertiesFile</td>
 	  <td>percorso di un file di properties che pu&ograve; essere utilizzato per pilotare alcuni aspetti della generazione. 
 	  Per un dettaglio delle properties supportate vedere pi&ugrave; avanti</td>
