--- a/html/guigen/overview.html
+++ b/html/guigen/overview.html
@@ -63,8 +63,7 @@
  	su tecnologie Servlet/JSP e framework struts2/spring. Dalla versione 2.4.0 &egrave; possibile generare:
  	</p>
  	<ol>
- 	<li>un EAR deployabile in applicaqtion server <b>JBoss 4.3</b> o <b>Weblogic9.2</b></li>
- 	<li>un WAR deployabile in un portlet container <b>liferay</b></li>
+ 	<li>un EAR deployabile in applicaqtion server <b>JBoss (4.3, 6.0, 6.2)</b> o <b>Weblogic9.2</b></li>
  	</ol>
  	<p>
  	Per approfondimenti circa il mapping tram modello GUIGEN e piattaforma specifica 
