aggiunta documentazione property per spring autowiring
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@5804 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -394,6 +394,21 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
 	  </tr>
 	  
+	  <tr>
+	  <td><code>guigen.spring.autowire</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: serve per impostare una differente strategia di autowire nello strato spring
+	  	rispetto al default che &egrave; <i>autodetect</i>.
+	  	</li>
+   		<li>default: autodetect</li>
+	  	</ul>
+	  </td>
+	  <td><code>vedere documentazione di spring</code></td>
+	  <td>
+	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
+	  </tr>
+	  
 	  </tbody>
 </table>
 </p>
