STDMDD-1600: introduzione modalità HTML5 opzionale
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@5904 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -409,6 +409,20 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
 	  </tr>
 	  
+	  <tr>
+	  <td><code>guigen.html.mode</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: serve per scegliere se renderizzare HTML dichiarato come <i>xhtml</i> (default) o <i>html5</i>.
+	  	</li>
+   		<li>default: xhtml</li>
+	  	</ul>
+	  </td>
+	  <td><code>la modalit&agrave; <i>html5</i> &egrave; stata introdotta per permettere l'introduzione
+	  nel codice dei widget/panel user defined di elementi tipici di HTML5 (es. <i>canvas</i>).</code></td>
+	  <td>
+	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
+	  </tr>
 	  </tbody>
 </table>
 </p>
