correzione documentazione cartuccia con nuovi parametri
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@6533 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -79,7 +79,8 @@
 <pre>    
 <font color='#000080'>&lt;cartridge</font>&nbsp;<font color='#000080'>file=</font><font color='#008000'>"it/csi/mddtools/guigen/workflow/guigenCheck.mwe"</font>
   <font color='#000080'>model=</font><font color='#008000'>"myprod.mdd/src/model/myprod/mycomp/myapp.guigen"</font>&nbsp;
-  <font color='#000080'>portal=</font><font color='#008000'>"sisp"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <font color='#000080'>templateName=</font><font color='#008000'>"neutral"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <font color='#000080'>templateVersion=</font><font color='#008000'>"v1"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font color='#000080'>/&gt;</font><br>
 
 </pre>    
@@ -257,7 +258,8 @@ poi applicare la cartuccia di <i>generazione</i> del prototipo.
 <font color='#000080'>&lt;cartridge</font>&nbsp;<font color='#000080'>file=</font><font color='#008000'>"it/csi/mddtools/guigen/workflow/struts2Basic.mwe"</font>
   <font color='#000080'>model=</font><font color='#008000'>"myprod.mdd/src/model/myprod/mycomp/myapp.guigen"</font>&nbsp;
   <font color='#000080'>targetProjectName=</font><font color='#008000'>"mycomp"</font>&nbsp;
-  <font color='#000080'>portal=</font><font color='#008000'>"sisp"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <font color='#000080'>templateName=</font><font color='#008000'>"neutral"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <font color='#000080'>templateVersion=</font><font color='#008000'>"v1"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <font color='#000080'>propertiesFile=</font><font color='#008000'>"src/workflow/myprod/mycomp/workflow.properties"</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font color='#000080'>/&gt;</font><br>
 </pre>    
